--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass-official": "~3.1.1",
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "bootstrap-colorpicker": "~2.3.3",
+    "vue": "~1.0.24"
   },
   "devDependencies": {
     "chai": "~3.5.0",
