--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "echarts-theme-builder",
   "version": "0.0.0",
   "dependencies": {
-    "bootstrap-colorpicker": "^2.3.3"
+    "bootstrap-colorpicker": "^2.3.3",
+    "file-saver": "^1.3.2"
   },
   "devDependencies": {
     "browser-sync": "^2.12.10",
