--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-bower-files": "^0.2.3",
     "gulp-cache": "^0.1.11",
     "gulp-clean": "^0.2.4",
+    "gulp-concat": "^2.6.0",
     "gulp-csso": "^0.2.8",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
