--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "echarts-theme-builder",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.0.5"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.1",
-    "@vue/compiler-sfc": "^3.0.5",
-    "typescript": "^4.1.3",
-    "vite": "^2.1.5",
-    "vue-tsc": "^0.0.15"
-  }
+    "name": "echarts-www-spa-boilerplate",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "vite --port 3008",
+        "release": "vue-tsc --noEmit --skipLibCheck && vite build",
+        "serve": "vite preview"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^1.2.2",
+        "@vue/compiler-sfc": "^3.0.11",
+        "chalk": "^3.0.0",
+        "fs-extra": "^8.1.0",
+        "globby": "^10.0.1",
+        "node-static": "^0.7.11",
+        "open": "^7.1.0",
+        "sass": "^1.32.13",
+        "typescript": "^4.1.3",
+        "vite": "^2.3.3",
+        "vue-tsc": "^0.1.4",
+        "yargs": "^6.6.0"
+    },
+    "dependencies": {
+        "element-plus": "^1.0.2-beta.44",
+        "lodash": "^4.17.19",
+        "vue": "^3.0.11",
+        "vue-i18n": "^9.1.6"
+    }
 }
