--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "yargs": "^6.6.0"
     },
     "dependencies": {
+        "echarts": "^5.3.1",
         "element-plus": "^1.0.2-beta.44",
         "lodash": "^4.17.19",
         "vue": "^3.0.11",
