--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     },
     "dependencies": {
         "echarts": "^5.3.1",
-        "element-plus": "^1.0.2-beta.44",
+        "element-plus": "^2.1.9",
         "lodash": "^4.17.19",
         "vue": "^3.2.32",
         "vue-i18n": "^9.1.9"
