--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "yargs": "^6.6.0"
     },
     "dependencies": {
+        "@element-plus/icons-vue": "^1.1.4",
         "echarts": "^5.3.1",
         "element-plus": "^2.1.9",
         "lodash": "^4.17.19",
