feat: builtin themes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "module": "es6",
     "moduleResolution": "node",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
