--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vite --port 3008",
-    "release": "vue-tsc --noEmit --skipLibCheck && vite build",
+    "check": "vue-tsc --noEmit --skipLibCheck",
+    "release": "vite build",
     "serve": "vite preview"
   },
   "devDependencies": {
@@ -16,9 +17,9 @@
     "node-static": "^0.7.11",
     "open": "^7.1.0",
     "sass": "^1.32.13",
-    "typescript": "^4.1.3",
+    "typescript": "4.7",
     "vite": "^2.3.3",
-    "vue-tsc": "^0.1.4",
+    "vue-tsc": "^0.38.1",
     "yargs": "^6.6.0"
   },
   "dependencies": {
