--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "devDependencies": {
     "copy-dir": "^1.3.0",
     "fs-extra": "^9.0.1",
-    "node-sass": "^7.0.0",
     "opn": "^5.4.0",
+    "sass": "^1.83.4",
     "uglify-js": "^3.10.1"
   },
   "engines": {
