--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "echarts-theme-builder",
+  "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "node build.js",
-    "release": "node build.js --release"
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "vue": "^3.5.18"
   },
   "devDependencies": {
-    "copy-dir": "^1.3.0",
-    "fs-extra": "^9.0.1",
-    "opn": "^5.4.0",
-    "sass": "^1.83.4",
-    "uglify-js": "^3.10.1"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/tsconfig": "^0.7.0",
+    "typescript": "~5.8.3",
+    "vite": "^7.1.2",
+    "vue-tsc": "^3.0.5"
   }
 }
