--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "echarts": "^6.0.0",
+    "vant": "^4.9.21",
+    "vue": "^3.5.18",
+    "vue-i18n": "^9.14.5",
+    "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
