--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "^24.4.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
