--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "http-server app",
+    "serve": "http-server app",
+    "release": "RELEASE=true vue-tsc -b && RELEASE=true vite build"
   },
   "dependencies": {
     "echarts": "^6.0.0",
@@ -16,9 +18,12 @@
     "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.4.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "copy-dir": "^1.3.0",
+    "fs-extra": "^11.3.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
