--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "http-server app",
-    "serve": "http-server app",
-    "release": "npm run build && node scripts/release.js"
+    "serve:dist": "http-server dist",
+    "serve:app": "http-server app",
+    "release": "npm run build -- --mode app && node scripts/release.js"
   },
   "dependencies": {
-    "echarts": "^6.0.0",
     "vant": "^4.9.21",
-    "vue": "^3.5.18",
+    "vue": "^3.5.24",
     "vue-i18n": "^9.14.5",
     "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^24.4.0",
+    "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.7.0",
+    "@vue/tsconfig": "^0.8.1",
     "copy-dir": "^1.3.0",
-    "fs-extra": "^11.3.1",
+    "echarts": "^6.0.0",
+    "fs-extra": "^11.3.2",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2",
-    "vue-tsc": "^3.0.5"
+    "vite": "^7.2.2",
+    "vite-plugin-static-copy": "^3.1.4",
+    "vue-tsc": "^3.1.3"
   }
 }
