--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "i18n-ally.localesPaths": [
-        "src/locales"
-    ],
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+  "i18n-ally.localesPaths": [
+    "src/locales"
+  ],
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
